--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -1042,5 +1042,78 @@
 %
 %  Misc
 %
-	
+
+
+
+
+
+
+%
+% Performance Evaluation Metrics
+%
+
+@article{kasturi_2008,
+  title={Framework for performance evaluation of face, text, and vehicle detection and tracking in video: Data, metrics, and protocol},
+  author={Kasturi, R. and Goldgof, D. and Soundararajan, P. and Manohar, V. and Garofolo, J. and Bowers, R. and Boonstra, M. and Korzhova, V. and Zhang, J.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  pages={319--336},
+  year={2008},
+  publisher={Published by the IEEE Computer Society}
+}
+
+@inproceedings{ellis_2010,
+  title={PETS2010 and PETS2009 Evaluation of Results Using Individual Ground Truthed Single Views},
+  author={Ellis, A. and Ferryman, J.},
+  booktitle={Advanced Video and Signal Based Surveillance (AVSS), 2010 Seventh IEEE International Conference on},
+  pages={135--142},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{taj_2007,
+  title={Multi-feature graph-based object tracking},
+  author={Taj, M. and Maggio, E. and Cavallaro, A.},
+  journal={Multimodal Technologies for Perception of Humans},
+  pages={190--199},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{lee_2009,
+  title={Speed Performance Improvement of Vehicle Blob Tracking System},
+  author={Lee, S. and Nevatia, R.},
+  journal={Multimodal Technologies for Perception of Humans},
+  pages={197--202},
+  year={2009},
+  publisher={Springer}
+}
+
+
+
+% hungarian algorithm paper
+
+@article{munkres_1957,
+  title={Algorithms for the assignment and transportation problems},
+  author={Munkres, J.},
+  journal={Journal of the Society for Industrial and Applied Mathematics},
+  pages={32--38},
+  year={1957},
+  publisher={JSTOR}
+}
+
+
+% viper groundtruth tool (the paper)
+
+@inproceedings{doermann_2000,
+  title={Tools and techniques for video performance evaluation},
+  author={Doermann, D. and Mihalcik, D.},
+  booktitle={Pattern Recognition, 2000. Proceedings. 15th International Conference on},
+  volume={4},
+  pages={167--170},
+  year={2000},
+  organization={IEEE}
+}
+
+
+
 
